changed the image sizes to avoid stretching in carousel

--- a/src/app/ui/artists/artists.component.scss
+++ b/src/app/ui/artists/artists.component.scss
@@ -5,11 +5,11 @@
     margin-top: -40px;
 }
 img{
-    width: 100%;
-    height:650px;
+     width: 100%;
+    //  height:100%;
 }
 .slide-gradient {
-max-height: 850px;
+ max-height: 650px;
 }
 .slide-gradient::before {
 content: '';
